--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@ load_gsap: true
 					title="page-home.about-us.card7"
 					text="page-home.about-us.card7-back-side"
 				%}
+				{% include aboutUsCard.html
+					title="page-home.about-us.card8"
+					text="page-home.about-us.card8-back-side"
+				%}
 			</div>
 		</div>
 		<div class="team">
